<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MarcaActivity">


    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="625dp"
        android:orientation="vertical"
        android:paddingTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtIdRol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_id"
            />

        <EditText
            android:id="@+id/edtIdRol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtRolNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_nombre"
            />

        <EditText
            android:id="@+id/edtRolNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtRolEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_estado"
            />

        <Spinner
            android:id="@+id/spnRolEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_estado"
            android:layout_marginTop="15dp"/>


        <Button
            android:id="@+id/btnRolSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#32CD32"
            android:text="@string/btn_guardar"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnRolDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:layout_marginTop="10dp"
            android:text="@string/btn_elimina"
            android:textColor="#ffffff" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>